# pqe-hawk

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  build.rs
.github/workflows/: ci.yml
c-reference/: PROVENANCE.md
c-reference/hawk-512/: ng_fxp.c  ng_hawk.c  ng_inner.h  ng_ntru.c  ng_poly.c
c-reference/kat_vectors/: PQCsignKAT_HAWK-512.rsp
c-reference/patches/: 0001-add-debug-trace-hooks.patch
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_decode_pubkey.rs  fuzz_decode_signature.rs  fuzz_verify.rs
src/: error.rs  hash.rs  lib.rs  ntt.rs  params.rs  ring.rs  sample.rs  serialize.rs
src/keygen/: fxp.rs  fxr.rs  hawk_keygen.rs  mod.rs  mp31.rs  ntru.rs  ntru_profile.rs  poly.rs  primes.rs  q_derive.rs  regen_fg.rs  types.rs  zint31.rs
src/sign/: bp.rs  mod.rs  symbreak.rs
src/verify/: consts.rs  fx32.rs  helpers.rs  mod.rs  mp.rs  verify_inner.rs
tests/: aes_ctr_drbg.rs  cross_check.proptest-regressions  cross_check.rs  fuzz_like.rs  nist_kat.rs  proptest_round_trip.proptest-regressions  proptest_round_trip.rs  timing_smoke.rs
