[package]
name = "pqe-hawk"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nixprotocol/pqe-hawk"
authors = ["PQE Chain Contributors"]
description = "Pure-Rust port of the HAWK-512 post-quantum signature scheme, byte-exact against the reference C."
readme = "README.md"
keywords = ["cryptography", "post-quantum", "signature", "lattice", "hawk"]
categories = ["cryptography"]

[dependencies]
sha3 = "0.10"
rand = "0.8"
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"

[dev-dependencies]
proptest = "1"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
aes = "0.8"
cipher = "0.4"

[features]
default = []
cross-check-reference-c = ["dep:cc", "dep:bindgen"]
# Enable slow / expensive proptests (keygen-heavy fuzz cases).
slow-tests = []

[build-dependencies]
cc = { version = "1", optional = true }
bindgen = { version = "0.69", optional = true }

# Lints: the crate is a byte-exact port of reference C, so a few cosmetic
# lints are suppressed where the "violation" deliberately mirrors the C
# source layout (explicit parens around shift-index expressions for
# operator-precedence clarity; `x + 0` identity ops preserved to keep the
# line-by-line correspondence with the reference). All genuinely useful
# clippy/rustc checks stay enabled.
[lints.rust]
unsafe_code = "deny"
unused_parens = "allow"

[lints.clippy]
# Preserved-from-C-porting cosmetics:
identity_op = "allow"
needless_range_loop = "allow"
# Methods named after their C counterparts (mp_add, mp_sub, ...) shadow std
# trait names; this is intentional and the types don't implement those traits.
should_implement_trait = "allow"
# C functions take many parameters (e.g. mp_mp31_sig: 8 args); refactoring
# to structs would obscure the byte-exact correspondence with the reference.
too_many_arguments = "allow"
# Defensive constant-size asserts in unit tests (e.g. `assert!(HAWK_N > 0)`)
# are idiomatic compile-time-const sanity checks; clippy's warning that they
# will be optimized out is the point.
assertions_on_constants = "allow"
# `c >= -4 && c <= 4` stylistically matches the bounds comment `[-4, 4]`
# and reads more naturally than `(-4..=4).contains(&c)` in the regen_fg
# popcount-in-range assertion contexts.
manual_range_contains = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
